--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contratações de hackers e detetives</title>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/assets/detetive.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    
+</head>
+<body class="corpo">
+    <h1>Elementar meu caro Watson</h1>
+    <p>Soluções através de comandos no terminal e linhas de código e inteligência investigativa!</p>
+    <header class="nav">
+        <a href="#mais-xp">Mais experientes</a>
+        <a href="#menos-xp">Menos experiente</a>
+        <a href="pika">Top 10</a>
+    </header>
+    <main>
+        <div class="detetive">
+            <h2 id="mais-xp">Mais experientes</h2>
+            <div class="card-left">
+                <ol class="lista-detetive">
+                    <li>
+                        <h3>light yagami</h3>
+                        <p>Light Yagami de 17 anos, tem experiência desde criança com investigações ,<br>em conjunto com o departamento de polícia em Kanto, no Japão. <br> 
+                            Mora em Tóquio, porém viveu uns mesesm em Los Angeles, Estados Unidos.
+                        </p>
+                        <button class="button" id="button">Let's talk</button>
+                    </li>
+                   <card-detetive></card-detetive>
+                </ol>
+                
+            </div>
+            <div class="card-right">
+               <img src="/assets/raito.jpg" alt="raito yagami">
+            </div>
+        </div>
+        <div class="hacker">
+            <h2 id="mais-xp">Mais experientes</h2>
+            <div class="card-left">
+                <ol class="lista-hacker">
+                    <li>
+                        <h3>Elliot</h3>
+                        <p>Elliot Anderson, é um hacker com mais de 6 anos de experiência, cujo é especialista em CyberSegurança na Allsafe <br> e membro na fsociety,
+                            um grupo de hackers, porém suas atividades são sigilosas.
+                        </p>
+                        <button class="button" id="button">Let's talk</button>
+                    </li>
+                </ol>
+            </div>
+            <div class="card-right">
+               <img src="/assets/elliot.png" alt="elliot">
+            </div>
+           </div>
+        </div>
 
+    </main>
+    <script src="/js/detetive.js" defer></script>
+    <script src="/js/hacker.js" defer></script>
+</body>
+</html>
